fix the alignment of the 'what-we-do' section to accomodate facts section (further sections)

--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -188,18 +188,29 @@ a {
   height: 1850px;
   background: #354463 0% 0% no-repeat padding-box;
   position: relative;
-  top: 16rem;
+  top: 16.9rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  
+
+}
+
+.mission-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  padding: 5px;
+  top: 0rem;
 }
 
 .button-what-we-do {
   position: relative;
   width: 160px;
   height: 40px;
+  margin-bottom: 48px;
   background: #FFFFFF 0% 0% no-repeat padding-box;
   top: 3rem;
 }
@@ -217,6 +228,7 @@ a {
   text-align: center;
   font: Bold 22px/28px Helvetica;
   letter-spacing: 0;
+  padding: 5px;
   color: #FFFFFF;
   width: 302px;
   height: 134px;
@@ -230,6 +242,8 @@ a {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 2rem;
+
 }
 
 .center-small-img {
@@ -284,6 +298,22 @@ a {
   text-align: center;
   bottom: 0.5rem;
 }
+
+.climate-change-section {
+  position: relative;
+  background: transparent url('/img/Did-you-know-background-mobile.png') 0% 0% no-repeat padding-box;
+  width: 98%;
+  display: grid;
+  grid-template-rows: repeat(5, 1fr);
+  top: 16.9rem;
+}
+.climate-change-text {
+  display: flex;
+  flex-direction: column;
+  
+  
+}
+
 
 
 
